--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,34 @@
-spring.application.name: com.kb.health
+server:
+  port: 8080
+
+spring:
+  application:
+    name: com.kb.health
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:coding_test;MODE=Mysql
+    username: test
+    password: test
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
+        show_sql: true
+    defer-datasource-initialization: true
+
+
+logging:
+  level:
+    root: info
+    web: trace
+    sql: trace
+
+
